# zmq-serde

./: Cargo.toml
src/: lib.rs
src/client/: main.rs
src/daemon/: main.rs
