[package]
name = "zmq-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = "1.27.0"
zeromq = "0.3.3"


[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
